js/js.translator/testData/incremental/invalidation/mainFunctionSelectSamePackageMixedShape/main/c.0.kt
package c

fun main() {
    value.ok += "C0"
}
